# repro_test_fdw

./: .gitignore  README.md
client_golang/: go.mod  go.sum  main.go
client_rust/: Cargo.toml
client_rust/src/: main.rs
repro_test_fdw/: Cargo.toml  README.md  repro_test_fdw.control
repro_test_fdw/src/: lib.rs
