[package]
name = "repro_test_fdw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_repro_test_fdw"
path = "./src/bin/pgrx_embed.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pgrx_embed)'] }

[features]
default = ["pg16"]
# pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
# pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
# pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx-tests/pg16", "pgrx/pg16", "supabase-wrappers/pg16"]
# pg17 = ["pgrx/pg17", "pgrx-tests/pg17", "supabase-wrappers/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0.98"
pgrx = { version = "=0.14.3", default-features = true }
supabase-wrappers = { version = "0.1.22", default-features = false }

[dev-dependencies]
pgrx-tests = { version = "=0.14.3" }
